# Semantic-Versioning

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.cmd  build_win32.cmd  build_win64.cmd
setup/: License.rtf
src/: CMakeLists.txt  main.c  version.h.in
